tests/fixtures/pass/stdlib_async_cancel_done_task_vm.walrus
import "std/async" as asyncx;

async fn quick : {
    return 1;
}

let task = quick();
println(await task);
println(asyncx.cancel(task));
println(asyncx.cancelled(task));
