tests/fixtures/fail/stdlib_async_cancel_non_task_vm.walrus
import "std/async" as asyncx;

println(asyncx.cancel(1));
